[#4490] - Freshfone ongoing call timer & buttons colour change and user image alignment fix

--- a/public/src/freshfone/client/_ongoing.scss
+++ b/public/src/freshfone/client/_ongoing.scss
@@ -51,10 +51,11 @@
 		}
 	}
 	.preview_pic img {
-		width: 30px;
-		height: 28px;
+		width: 22px;
+		height: auto;
 		@include border-radius(0);
 		margin-top: 2px;
+		@include margin-left(7px);
 	}
 	.call_duration {
 		background-color: $call-duration-background;
